fixed slider bug - added spacing to last child

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -20,7 +20,7 @@
     height: 248px;
     overflow: hidden;
     position: relative;
-
+    background-color: white;
     img {
       width: 100%;
       object-fit: contain;
@@ -57,6 +57,9 @@
       }
     }
   }
+}
+.cyclee-card:last-child {
+  padding-bottom: 70px;
 }
 
 .cyclee-history {
