--- a/app/assets/stylesheets/pages/_laneshow.scss
+++ b/app/assets/stylesheets/pages/_laneshow.scss
@@ -5,7 +5,6 @@
     bottom: 0;
     height: 210px;
     transition: all .3s ease-out;
-    padding-bottom: 50px;
   }
   .active {
     height: 85%;
